--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(ATM_Machine)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(ATM_Machine main.cpp)
+add_executable(ATM_Machine main.cpp
+        Account.cpp
+        Account.h
+        UserInterface.cpp
+        UserInterface.h)
